package org.victoriest.test;

message MobileSuiteProtobuf {
	required int32 type = 1;
	required int32 arena = 2;
	required int32 command = 3;
	optional bytes message = 4;
}

message TestMessage {
	required int32 testInt = 1;
	required string testString = 2;
}

// protoc MoblieSuiteProtobufProtocol.proto --java_out=../src/